Changed z-index bug

--- a/react-app/src/components/NavigationBar/NavigationBar.module.css
+++ b/react-app/src/components/NavigationBar/NavigationBar.module.css
@@ -9,9 +9,11 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
+  z-index: 0;
+}
+.popupOpen {
   z-index: 2;
 }
-
 .closed {
   width: 50px;
   box-shadow: 0px 0px 0px;
